networkpolicy/allow-pod-a.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-pod-a
spec:
  podSelector:
    matchLabels:
      app: web      # se aplica solo al pod web
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: pod-a
