networkpolicy/deny-all.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
spec:
  podSelector: {}  # selecciona todos los pods del namespace
  policyTypes:
    - Ingress
